# mailing_service

./: .env.template  project_structure.txt  pyproject.toml
config/: settings.py  urls.py
mailing_service/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
mailing_service/migrations/: 0001_initial.py
mailing_service/templates/: home.html
mailing_service/templates/mailing/: base.html  client_confirm_delete.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_stats.html  message_confirm_delete.html  message_form.html  message_list.html
mailing_service/templates/mailing/includes/: footer.html  header.html
media/users/avatars/: admin.jfif
static/css/: mailing.css  style.css
templates/: greeting.html
users/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_user_is_blocked_user_role_and_more.py
users/templates/: login.html  profile_edit.html  registration.html  users_base.html
users/templates/includes/: users_footer.html  users_header.html
users/templates/users/: base.html  login.html  password_reset.html  password_reset_complete.html  password_reset_done.html  profile_edit.html  registration.html  user_list.html
users/templates/users/includes/: footer.html  header.html
